--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -22,4 +22,4 @@ jobs:
         run: cmake --build build --clean-first -j12
 
       - name: Run
-        run: ./build/testgol
+        run: ./build/test/testgol
