--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.15...3.30)
 
 project(GameOfLifeProject)
 
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 
 set(SRC_DIR "${CMAKE_CURRENT_LIST_DIR}/src")
